# mcp-python-server

./: .env.example  Makefile  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: ci.yml
mcp_server/: helpers.py  ocr.py  tools.py
ocr_service/: .env.example  Makefile  logger.py  main.py  ocr.py  pyproject.toml  routes.py  schemas.py  settings.py
utils/: logger.py
